--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,6 +9,8 @@
     font-size: 32px;
     text-align: center;
     padding-bottom: 20px;
+    padding-top: 20px;
+    
 }
 
 
@@ -49,6 +51,7 @@ main {
     border-bottom-right-radius: 35px;
     display: flex;
     justify-content: center;
+    padding-top: 5px;
 }
 
 .container input {
